# NICER-core

./: .gitignore  License  README.md  langgraph.json  pyproject.toml
src/graphs/: agent.py  memory.py
src/langgraph_slack/: __init__.py  __main__.py  app.py  auth.py  auth_fastapi.py  config.py  deepseek_utils.py  patch_typing.py  server.py  server_mit.py
src/logging/: __init__.py  bucket_creation_test.py  conversation_logger.py  live_monitor.py  memory_operations_logger.py  metrics_integration.py
src/metrics/: knowledge_discovery_metrics.py  sql_agent_discovery_metrics.py
src/middleware/: conversation_middleware.py
src/monitoring/: live_account_streaming.py  llm_cost_wrapper.py
src/nicer_logging/: __init__.py  conversation_logger.py  metrics_integration.py
src/prompts/: __init__.py
