[project]
name = "langgraph-slack"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "accelerate>=0.12.0",
    "aiohttp",
    "fastapi>=0.115.6",
    "google-auth-oauthlib>=1.0.0",
    "google-auth>=2.14.1",
    "google-cloud-bigquery>=3.10.0",
    "google-cloud-core>=2.3.3",
    "langchain-google-community>=0.0.3",
    "langchain-google-community[featurestore]>=0.0.2",
    "langchain-huggingface>=0.0.1",
    "langchain-openai>=0.3.7",
    "langchain>=0.3.20",
    "langgraph-prebuilt>=0.1.2",
    "langgraph-sdk>=0.1.61",
    "langmem>=0.0.16",
    "pandas-gbq>=0.28.0",
    "python-dotenv>=1.0.1",
    "slack-bolt>=1.23.0",
    "transformers>=4.28.1",
    "typing-extensions>=4.5.0",
    "uvicorn>=0.34.0",
]

[project.packages.find]
where = [
    "src",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "langgraph-api>=0.0.28",
    "langgraph-cli>=0.1.75",
]
